@@ -14,6 +14,7 @@ Changes in version 1.3
 - Added dbdoc documentation generator
 - Database Diff checks views
 - Package re-organization
+- Added createProcedure change
 - Misc bug fixes
 
 Changes in version 1.2.1 (2007.8.31)
